--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.1",
+    "nodemon": "^2.0.18",
     "object-hash": "^3.0.0"
   }
 }
