--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DB_URL=mongodb+srv://normal:normal%404585@cluster0.m3s4l.mongodb.net/webl?retryWrites=true&w=majority
+DB_URL=mongodb+srv://saketh-coupon:coupon123@cluster0.xbf0z.mongodb.net/?retryWrites=true&w=majority
